
ChangeLog:
----------

0.46
	* Converted README files to Markdown.
	* Added a time-out for scripts.
	* Improved parameter checking (and better error messages).

0.45
	* Fixes related to Lua version handling
	* Misc build fixes
	* Add set_on_bottom(): move to bottom of stack
	* Change set_on_top() so that it merely raises the window
	* Add get_class_group_name().
          This complements get_class_instance_name re. WM_CLASS.
	* More aliases for function names containing 'maximize' or
	  'minimize': accept -ise spellings
	* Visibly deprecate function names containing 'horisontally'
	* Add set_adjust_for_decoration(), useful if you have problems with
	  positioning & resizing of decorated windows [note: experimental]
	* Add get_window_frame_extents()
	* Allow workspaces to be referenced by name
	* Extra event type for running rules on window name/title changes
	* Ignore dot files in the scripts directory.
	* More UTF-8 support: use_utf8() (sets and reads whether UTF-8 is
	  default, initially false), window_property_is_utf8() and
	  window_property_full().

0.44
	* Default to Lua 5.3, and permit use of other versions
	* Add support for setting and deleting window properties
	* Add get_process_name(), which returns the name of the process
	  owning the window (if possible)
	* Add get_monitor_index() and get_monitor_geometry(); improve
	  monitor index/geometry discovery
	* Add get_window_is_decorated() (which uses the Motif window hints)
	* Alias center() as centre()
	* Extend centre() to allow centring on a given monitor and to allow
	  horizontal or vertical only
	* Extend set_window_position() to allow positioning on a given
	  monitor and control which corner is measured from.
	  (Behaviour with two parameters is unchanged.)
	* Quote the option hyphens in the man page (preventing replacement)
	* Various const & compiler warning (gcc -Wextra) fix-ups
	* Support for UTF-8 strings in window properties
	* Allow replacements for pkg-config at compile time

0.43