@@ -5,6 +5,7 @@ ChangeLog:
 0.46
 	* Converted README files to Markdown.
 	* Added a time-out for scripts.
+	  (Release build only; inactive if DEBUG is defined at build time.)
 	* Improved parameter checking (and better error messages).
 
 0.45
